--- a/css/master.css
+++ b/css/master.css
@@ -64,8 +64,10 @@ li a:hover {
 	float:inherit;
 }
 
-.gallery{
+.gallery img{
 	width:auto;
-	height: 500px;
-	overflow:hidden;
+	height: 300px;
+	float: left;
+	padding: 5px 5px 5px 5px;
+
 }
