--- a/css/master.css
+++ b/css/master.css
@@ -66,8 +66,9 @@ li a:hover {
 
 .gallery img{
 	width:auto;
-	height: 300px;
+	height: 270px;
 	float: left;
 	padding: 5px 5px 5px 5px;
+	margin: auto;
 
 }
