--- a/css/master.css
+++ b/css/master.css
@@ -3,7 +3,11 @@ body{
 }
 
 .container {
-	
+	 background: url(images/cover.jpg) no-repeat center center fixed; 
+	  -webkit-background-size: cover;
+	  -moz-background-size: cover;
+	  -o-background-size: cover;
+	  background-size: cover;
 	text-align:center;	
 }
 
