--- a/css/master.css
+++ b/css/master.css
@@ -14,9 +14,24 @@ body{
 }
 
 .cover{
-	position: static;
-	margin-top:10px;
+	 position: fixed; 
+	  top: -50%; 
+	  left: -50%; 
+	  width: 200%; 
+	  height: 200%;
 }
+
+.cover img{
+	 position: absolute; 
+	  top: 0; 
+	  left: 0; 
+	  right: 0; 
+	  bottom: 0; 
+	  margin: auto; 
+	  min-width: 50%;
+	  min-height: 50%;
+}
+	
 
 nav{
 	float:right;
