--- a/css/master.css
+++ b/css/master.css
@@ -3,6 +3,9 @@ body{
 }
 
 .container {
+    margin:0px auto;
+	width:1280px;
+	height:auto;
 	text-align:center;	
 }
 
@@ -14,24 +17,9 @@ body{
 }
 
 .cover{
-	 position: fixed; 
-	  top: -50%; 
-	  left: -50%; 
-	  width: 200%; 
-	  height: 200%;
+	position: static;
+	margin-top:10px;
 }
-
-.cover img{
-	 position: absolute; 
-	  top: 0; 
-	  left: 0; 
-	  right: 0; 
-	  bottom: 0; 
-	  margin: auto; 
-	  min-width: 50%;
-	  min-height: 50%;
-}
-	
 
 nav{
 	float:right;
