--- a/css/master.css
+++ b/css/master.css
@@ -3,10 +3,10 @@ body{
 }
 
 .container {
-    margin:0px auto;
-	width:1280px;
-	height:auto;
-	text-align:center;
+    margin: auto;
+    width: 100%;
+    border: 0px solid #73AD21;
+    padding: 0px;
 }
 
 .banner{
@@ -40,9 +40,9 @@ nav li {
 	font-family: "Segoe UI Semibold", Segoe, sans-serif;
 	font-size:14px;
 	margin-left:1px;
-	margin-right:30px;
+	margin-right:1px;
 	padding-top:46px;
-	padding-right:0px;
+	padding-right:30px;
 }
 
 nav li a {
@@ -60,11 +60,33 @@ nav li a:active {
 }
 
 .showreel{
-	  position: static;
-    top:100px;
+	margin: auto;
+    width: 50%;
+    border: 0px solid green;
+    padding: 0px;
 }
 
-#video-a {
+#sheet{
+	text-align: center;
+	margin:20px 0px 0px 0px;
+}
+
+#sheet a:link {
+    color:gray;
+}
+
+#sheet a:visited {
+    color:gray;
+}
+
+#sheet a:hover {
+    color:red;
+}
+
+#sheet a:active {
+    color:red;
+}
+/*#video-a {
 	position:relative;
 	float:left;
     margin: 30px 0px 10px 200px;
@@ -84,15 +106,24 @@ nav li a:active {
 	float:left;
     margin: 10px 0px 10px 200px;
     border:0px solid #ccc;
+}*/
+
+.floating-box {
+    display: inline-block;
+    width: 650px;
+    height: 250px;
+    margin: 0px 40px 10px 60px;
+    border: 0px solid #73AD21;  
 }
+
 
 #video:hover {
     border: 1px solid #777;
 }
 
 #design_projects li{
-   float:left;
-	 list-style:none;
+    float:left;
+	list-style:none;
  	margin:0;
  	padding:60px 0px 0px 150px;
 }
@@ -108,12 +139,12 @@ nav li a:active {
 }
 
 #bio{
-	position: static;
-	left:800px;
-	color:white;
+	width:20%;
 	float:right;
-	margin-left: 100px 10px 100px 10px;
-	padding-left: 10px 0px 0px 10px;
+	color:white;
+	margin: auto;
+	border: 1px #FF0000;
+	padding: 10px 0px 0px 10px;
 }
 
 #email{
@@ -139,23 +170,18 @@ padding-right:0px;
 
 .gallery {
     margin: 5px;
-    border: 1px solid #ccc;
+    border: 0px solid #ccc;
     float: left;
-    width: 300px;
+    width: 500px;
 }
 
 .gallery:hover {
-    border: 1px solid #777;
+    border: 0px solid #777;
 }
 
 .gallery img {
     width: 100%;
     height: auto;
-}
-
-.desc {
-    padding: 15px;
-    text-align: center;
 }
 
 #myself-pic{
@@ -172,12 +198,11 @@ padding-right:0px;
 }
 
 footer{
-	position:fixed;
-	bottom:1px;
-	padding-top: 5px;
-	padding-left:540px;
 	text-align: center;
-    color: gray;
+	position:fixed;
+	bottom:2px;
+	color:gray;
+	opacity:0.6;
 	font-family: "Segoe UI Semibold", Segoe, sans-serif;
 	font-size:13px;
 }
