--- a/css/design.css
+++ b/css/design.css
@@ -1,37 +1,38 @@
-@media only screen and (max-width: 1920px) {
-    body {
-  	background-color:black;
-	background-image:url('images/cover.jpg');
-	background-repeat:no-repeat;
+body {
+	background-image: url(../images/cover-g.jpg);
 	background-size:cover;
-	height: auto;
+    background-repeat: no-repeat;
+	background-opacity: 0.1;
+
+
 }
 
 .container {
-    margin: auto;
-    border: 0px solid #73AD21;
-    padding: 0px;
+	width: 100%;
+	height: auto;
+	position: relative;
 }
 
 .banner{
-	margin:10px 0px 10px 0px;
-	padding:20px 0px 10px 0px;
+	margin:60px 0px 0px 90px;	
 }
 
-
-.cover{
-	position: static;
-	margin-top:0px;
+h3{
+	color: white;
+	text-align: center;
+    font-family: "Segoe UI Semibold", Segoe, sans-serif;
 }
 
 h4{
 	color: white;
 	text-align: center;
-  font-family: "Segoe UI Semibold", Segoe, sans-serif;
+    font-family: "Segoe UI Semibold", Segoe, sans-serif;
 }
 
 nav{
 	float:right;
+	margin-top: 45px;
+	margin-right: 90px
 }
 
 nav ul{
@@ -93,37 +94,94 @@ nav li a:active {
 	color: red;
 }
 
-/*DESIGN.html*/
-#banner{
-	border:0px solid white;
-}
-#content{
-	border:0px solid white;
-	height:auto;
-}
-#design-projects{
-	text-align: left;
-	width:200px;
-
-  margin-left: 30px;
-	margin-top: 30px;
-	border:0px solid white;
+.icons{
+	text-align: center;
+	position: absolute;
+	right: 0px;
+	bottom: 0px;
+	padding-right: 15px;
+	padding-bottom: 10px;
 }
 
-#design-projects li{
-		font-family: "Segoe UI Semibold", Segoe, sans-serif;
-		font-size:12px;
-		margin-bottom: 40px;
+.fa {
+	margin: auto;
+    padding: 10px;   
+    text-decoration: none;   
 }
 
-#design-projects li a {
+.fa-facebook {  
+    color: white;  
+}
+
+.fa-twitter {  
     color: white;
-    text-align: center;
-  	text-decoration:inherit
 }
 
-#design-projects li a:hover {
-    color: red;
+.fa-linkedin {
+    color: white;  
+}
+
+.fa-vimeo {
+    color: white;
+}
+
+.fa-instagram {
+    color: white;
+}
+
+.fa-500px{
+	color: white;
+}
+
+.fa-weibo{
+	color: white;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+/*DESIGN.html*/
+.design-content{
+	border: 1px solid white;
+	margin: 0 auto;
+}
+
+.tab {
+    float: left;
+    border: 1px solid #ccc;    
+    margin-top: 200px;
+    margin-left: 200px;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+    display: block;
+    background-color: inherit;
+    color: white;
+    padding: 22px 16px;
+    width: 100%;
+    text-align: left;
+    transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: none;
+}
+
+/* Create an active/current "tab button" class */
+.tab button.active {
+    background-color: grey;
+}
+
+/* Style the tab content */
+.tabcontent {
+    float: left;
+    padding: 0px 12px;
+    border: 1px solid #ccc;
+    width: 70%;
+    border-left: none;    
 }
 
 #bubble-chart{
@@ -140,7 +198,7 @@ nav li a:active {
 	text-align: center;
 	clear: both;
 	position: static;
-  padding: auto;
+    padding: auto;
 	color:white;
 }
 
