--- a/css/master.css
+++ b/css/master.css
@@ -6,11 +6,11 @@ body {
 
 .container {
 	width: 100%;
-	height: auto;
+	height: 700px;
 }
 
 .banner{
-	margin:60px 0px 0px 90px;	
+	margin:60px 0px 0px 90px;
 }
 
 h4{
@@ -56,6 +56,53 @@ nav li a:active {
 	opacity: 0.6;
 }
 
+#design-menu {
+    background-color: #none;
+    color: white;
+    padding: 6px;
+    font-size: 14px;
+    border: none;
+}
+
+#design-menu a:hover {
+	color: red;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+    margin: 0;
+    border: :1px solid green;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: none;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: white;
+    padding: 6px 1px;
+    text-decoration: none;
+    display: block;
+}
+
+li a:hover, .dropdown:hover #design-menu {
+	color: red;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover #design-menu {
+    background-color: none;
+}
+
 #home-menu{
 	color: red;
 }
@@ -84,6 +131,11 @@ nav li a:active {
 	color: red;
 }
 
+.placeholder{
+	height: 520px;
+	border: 0px solid pink
+}
+
 .showreel{
 	width: 60%;
 	margin: auto;
@@ -91,8 +143,8 @@ nav li a:active {
 }
 
 .showreel iframe{
-	margin: 40px auto;
-	display: block;	
+	margin: 20px auto;
+	display: block;
 }
 
 #sheet{
@@ -100,6 +152,10 @@ nav li a:active {
 	margin: auto;
 	padding: 0;
 	font-family: "Segoe UI Light", Segoe, sans-serif;
+}
+
+#sheet a {
+    color: white;
 }
 
 #sheet a:visited {
@@ -135,7 +191,7 @@ nav li a:active {
     border:0px solid #ccc;
 }*/
 
-.vfx-works{	
+.vfx-works{
  	margin: auto;
 	width: 20%
 	border:1px solid red;
@@ -149,7 +205,7 @@ nav li a:active {
 	font-size:14px;
 }
 
-.vfx-works li a:link {	
+.vfx-works li a:link {
     color: white;
   }
 
@@ -166,18 +222,19 @@ nav li a:active {
 	opacity: 0.6;
 }
 
-.video-gallery {	
+.video-gallery {
 	margin: 100px auto;
 	float: left;
-	padding-left: 120px;
-	width: 90%	
+	padding-left: 130px;
+	width: 90%;
 }
 
 .video-gallery iframe {
-	margin: 0 auto;    
+	margin: 0 auto;
     padding: 1px;
     border: 0px solid #73AD21;
 }
+
 
 /*DESIGN.html
 #design-projects{
@@ -224,32 +281,52 @@ nav li a:active {
 
 /*ABOUT.html*/
 .about{
-	position: relative;
+	position: static;
 	margin: 50px auto;
 	width: 52%;
 	border: 0px solid green;
 }
 
-.about img{	
-	margin-right: 60px;
+.about img{
+	margin: 0 auto;
 	border: 5px solid white;
-	float: left;	
+	float: left;
 }
 
 .about p{
-	position: absolute;
-	margin: 0px 0px 0px 500px;
-	color: white;	
-	border: 0px solid #FF0000;	
+	position: static;
+	padding-left: 380px;
+	width: 400px;
+	height: 300px;
+	color: white;
+	border: 0px solid #FF0000;
 	font-family: "Segoe UI Regular", Segoe, sans-serif;
 }
 
 #email{
 	text-align: center;
 	color: white;
-	margin-top: 150px;
-	font-family: "Segoe UI Regular", Segoe, sans-serif;
-	font-size: 22px;
+	margin-top: 200px;
+	padding-bottom: 280px;
+	font-family: "Segoe UI Semibold", Segoe, sans-serif;
+	font-size: 24px;
+}
+
+#email a:link{
+	color: white
+}
+
+#email a:visit{
+	color: white
+}
+
+#email a:hover{
+	color: red
+}
+
+#email a:active{
+	color: red;
+	opacity: 0.7
 }
 
 .gallery {
@@ -269,30 +346,30 @@ nav li a:active {
 }
 
 .icons{
-	text-align: center;
-	position: absolute;
-	right: 0px;
-	bottom: 0px;
-	padding-right: 15px;
-	padding-bottom: 10px;
+		position: static;
+		clear: both;
+		float: right;
+		padding-right: 15px;
+		padding-bottom: 10px;
 }
 
 .fa {
-	margin: auto;
-    padding: 10px;   
-    text-decoration: none;   
+	  margin: auto;
+    padding: 10px;
+    text-decoration: none;
+		bottom: 0px;
 }
 
-.fa-facebook {  
-    color: white;  
+.fa-facebook {
+    color: white;
 }
 
-.fa-twitter {  
+.fa-twitter {
     color: white;
 }
 
 .fa-linkedin {
-    color: white;  
+    color: white;
 }
 
 .fa-vimeo {
