--- a/css/master.css
+++ b/css/master.css
@@ -1,9 +1,9 @@
 body {
-    background-image: url(../images/cover-d.jpg);
-    background-size: 100%;
+    background-image: url(../images/cover/cover-dbw.png);
+    background-size: 2000px;
     background-repeat: no-repeat;
     margin: auto;
-    background-attachment: fixed;
+    background-attachment: fixed;    
 }
 
 h4{
@@ -13,12 +13,13 @@ h4{
 }
 
 .container {
-	position: relative;
-	margin: 30px auto;
-	width: 1300px;
-	height: 100%;
+	position: absolute;
+	margin: 160px 0px 20px 0px;
+	width: 100%;
+	height: 80%;
 	border: 0px solid yellow;
 	animation: fadein 1s;
+	z-index : 0.9
 }
 
 @keyframes fadein {
@@ -26,96 +27,125 @@ h4{
     to   { opacity: 1; }
 }
 
-.banner{
-	position: absolute;
-	width: 300px;
-	margin: 40px auto;
-	padding-left: 280px;
-	border: 0px solid gray
+.banner {
+	width: 100%;
+	height: 90px;
+	position: fixed;	
+	border: 0px solid white;
+	background-color: black;
+	opacity: 0.8;
+	z-index : 1
+}
 
+.title{	
+	position: fixed;
+	width: 300px;
+	margin: 0px 45px;
+	padding: 7px 100px;
+	border: 0px solid gray	
 }
 
 nav{
 	clear: both;
-	position: static;
-	margin: 0 auto;
-	
-	padding-top: 80px;
-	padding-left: 900px;
+	position: relative;
+	margin: 0px 0px 0px 400px;		
+	padding: 35px 50px 35px 100px;
 	border: 0px solid white;
-	width:600px;
+	float: right;	
 }
 
 nav li {
     display:inline-block;
-	font-family: "Segoe UI Semibold", Segoe, sans-serif;
-	font-size:14px;	
-	padding-right:40px;
+	font-family: "Segoe UI Regular", Segoe, sans-serif;
+	font-size: 14px;	
+	padding-right: 50px;
 }
 
-nav li a {
-    color: white;
+nav li a {    
     text-align: center;
-  	text-decoration:none;  	
+  	text-decoration: none;  	
 }
 
 nav li a:link {
-	color: white;	
+	color: white;
+	opacity: 1;	
 }
 
 nav li a:visited {
-	color: white;	 
+	color: white;
+	opacity: 1;	 
 }
 
 nav li a:hover {
-    color: black;
-    opacity: 0.4;
+    color: white;
+    opacity: 0.8
 }
 
 nav li a:active {
-    color: black;
-    opacity: 1;
+    color: white;
+    opacity: 1.0;
  }
 
 a {
+	color: white
+}
+
+a:visit{
+	color: white
+}
+a:hover{
+	color: lightgray;
+}
+
+a:active{
+		color: white;
+}
+
+/*
+.about a {
     color: white;
 }
 
-a:visited {
+.about a:visited {
     color: white;
 }
 
-a:hover {
+.about a:hover {
     color: white;
-    opacity: 0.6;
+    opacity: 0.8;
 }
 
-a:active {
+about a:active {
     color: white;
+}
+*/
+
+#home-menu{
+	color: white
 }
 
 #showreel-menu{
-	color: black;
+	color: white;
 }
 
 #vfx-menu{
-	color: black;
+	color: white;
 }
 
 #photo-menu{
-	color:black;
+	color:white;
 }
 
 #blog-menu{
-	color: black;
+	color: white;
 }
 
 #about-menu{
-	color: black;
+	color: white;
 }
 
 #contact-menu{
-	color: black;
+	color: white;
 }
 
 .placeholder{
@@ -158,7 +188,7 @@ a:active {
 
 /*photo.html*/
 #photo-gallery{
-	margin: 80px auto;
+	margin: 60px;
 	line-height: 0;   
     -webkit-column-count: 3;
     -webkit-column-gap:   0px; 
@@ -168,7 +198,10 @@ a:active {
 
 #photo-gallery img {
   /* Just in case there are inline attributes */
-  width: 435px !important;
+  clear: both;
+  margin: 0px;
+  padding: 0px;
+  width: 500px !important;
   height: auto !important;
   border: 0px solid white
 }
@@ -177,16 +210,14 @@ a:active {
 #blog-content p{
 	text-align: center;
 	color: white;
-	margin-top: 200px;
-	padding-bottom: 280px;
-	font-family: "Segoe UI Semibold", Segoe, sans-serif;
+	margin: 280px auto;
+	font-family: "Segoe UI Regular", Segoe, sans-serif;
 	font-size: 18px;
 }
 
 /*ABOUT.html*/
 .about{
-	position:static;
-	margin: 70px auto;
+	margin: 100px auto;
 	width: 900px;
 	height: auto;
 	border: 0px solid green;
@@ -196,47 +227,50 @@ a:active {
 	display: block;
 	position: absolute;
 	margin-left: 50px;
-	border: 3px solid white;	
+	padding-top: 5px;
+	border: 0px solid white;	
 }
 
-.about p{
-	margin-left: 480px;
-	padding-top: 70px;
-	width: 390px;
-	height: auto;
+#bio {
+	position: relative;
+	margin: 0px 0px 0px 460px;
+	padding: 0px 0px;
+	width: 330px;	
 	color: white;
 	border: 0px solid #FF0000;
-	font-family: Arial Unicode MS, Arial, Helvetica, sans-serif;
-	font-size: 17px;
+	font-family: "Segoe UI Light", Segoe, sans-serif;
+	font-size: 15px;
+	text-align: justify;
+	line-height: 140%;
 }
 
+#resume-icon {
+	position: relative;
+	float: left;
+	margin-top: 140px;
+	padding-left: 55px;	
+	border: 0px solid pink;
+}
 
-#email{
+#resume-link {
+	position: relative;
+	border: 0px solid yellow;
+	float: left;
+	padding-left: 85px;
+	padding-top: 155px;
+	font-family: "Segoe UI Light", Segoe, sans-serif;
+	font-size: 13px;
+}
+
+#email {
 	text-align: center;
 	display: block;
 	color: white;
-	margin:200px auto;
-	padding-bottom: 80px;
-	font-family: "Segoe UI Semibold", Segoe, sans-serif;
-	font-size: 24px;
+	margin: 280px auto;
+	font-family: "Segoe UI Regular", Segoe, sans-serif;
+	font-size: 20px;
 }
 
-#email a:link{
-	color: white
-}
-
-#email a:visit{
-	color: white
-}
-
-#email a:hover{
-	color: red
-}
-
-#email a:active{
-	color: red;
-	opacity: 0.7
-}
 
 .gallery {
     margin: 5px;
@@ -259,8 +293,7 @@ a:active {
 	position: fixed;
 	right: 12px;
 	bottom: 8px;
-	font-size: 1.4em;
-
+	font-size: 1.6em;
 }
 
 .fa {
@@ -304,10 +337,11 @@ a:active {
 
 footer{
 	position: fixed;
-	text-align: left;	
-	bottom:0px;
-	color:lightgray;
-	opacity: 0.5;
-	font-family: "Segoe UI Semibold", Segoe, sans-serif;
+	text-align: left;
+	padding-left: 10px;	
+	bottom: 0px;
+	color: lightgray;
+	opacity: 0.6;
+	font-family: "Segoe UI Regular", Segoe, sans-serif;
 	font-size:12px;
 }
