--- a/css/master.css
+++ b/css/master.css
@@ -14,9 +14,9 @@ h4{
 
 .container {
 	position: absolute;
-	margin: 160px 0px 20px 0px;
+	margin: 140px auto;
 	width: 100%;
-	height: 80%;
+	height: 70%;
 	border: 0px solid yellow;
 	animation: fadein 1s;
 	z-index : 0.9
@@ -29,7 +29,7 @@ h4{
 
 .banner {
 	width: 100%;
-	height: 90px;
+	height: 88px;
 	position: fixed;	
 	border: 0px solid white;
 	background-color: black;
@@ -66,6 +66,7 @@ nav li a {
   	text-decoration: none;  	
 }
 
+/*
 nav li a:link {
 	color: white;
 	opacity: 1;	
@@ -85,16 +86,19 @@ nav li a:active {
     color: white;
     opacity: 1.0;
  }
+*/
 
-a {
+a:link {
 	color: white
 }
 
-a:visit{
+a:visited {
 	color: white
 }
-a:hover{
+
+a:hover {
 	color: lightgray;
+	!animation: 0.5s;
 }
 
 a:active{
@@ -158,13 +162,13 @@ about a:active {
 	border: 0px solid pink
 }
 
-#showreel iframe{
+#showreel iframe {
 	display: block;
 	margin: auto;
 	border: 0px solid red;
 }
 
-#sheet{
+#sheet {
 	text-align: center;
 	display: block;	
 	padding: 20px;
@@ -172,10 +176,99 @@ about a:active {
 }
 
 /*VFX*/
+#works_cover {
+	position: relative;
+	margin: 80px auto;
+	padding-bottom: 100px;
+	width: 1006px;
+	border: 0px solid cyan;
+	z-index: 0.7;
+
+}
+
+#works_cover img{
+	clear: both;
+	margin: -2px -2px;
+	padding: 0;
+	border: 0px solid red;
+}
+
+.works-container {
+	clear: both;
+	position: relative;
+	width: 900px;
+	margin: 50px auto 160px auto;
+	padding-bottom: 40px;	
+	background-color: white;
+	border: 0px solid orange;
+}
+
+.works-container iframe {
+	display: block;
+	margin: 0px auto;
+	border: 0px solid pink
+}
+
+.works-container p{
+	position: relative;
+	margin: 20px 50px;
+	padding: 0px 0px;	
+	font-family: "Segoe UI Regular", Segoe, sans-serif;
+	color: black;
+	font-size: 15px;
+	border: 0px solid green;
+}
+
+.works-container ul{
+	 display:inline-block;
+	 position: relative;
+	margin: 20px 50px;
+	font-family: "Segoe UI Regular", Segoe, sans-serif;
+	font-size: 15px;
+}
+
+.works-container a{
+	color: black;
+}
+
+#vg-img {
+	margin: 0px auto;
+	width: 800px;
+	border: 0px solid cyan
+}
+
+#vg-img img {
+	position: relative;
+	margin: 0px;
+	padding: 0px;
+	width: 397px;
+}
+
+#au-img img {
+	position: relative;
+	margin: 10px 0;
+	width: 900px;
+}
+
+#lb-img img {
+	position: relative;
+	padding-bottom: 30px;
+	width: 900px;
+	border: 0px solid red
+}
+
+#sc-img img {
+	position: relative;
+	padding-bottom: 30px;
+	width: 900px;
+	border: 0px solid red
+}
+/*
 .video-gallery {
 	position: static;
-	margin:60px auto;
+	margin: 60px auto;
 	border: 0px solid blue
+	z-index:0.7;
 }
 
 .video-gallery iframe {
@@ -185,9 +278,10 @@ about a:active {
     padding-bottom: 30px;
     border: 0px solid #73AD21;
 }
+*/
 
 /*photo.html*/
-#photo-gallery{
+#photo-gallery {
 	margin: 60px;
 	line-height: 0;   
     -webkit-column-count: 3;
