--- a/css/master.css
+++ b/css/master.css
@@ -16,7 +16,7 @@ h4{
 	position: absolute;
 	margin: 140px auto;
 	width: 100%;
-	height: 70%;
+	height: 100%;
 	border: 0px solid yellow;
 	animation: fadein 1s;
 	z-index : 0.9
@@ -175,22 +175,48 @@ about a:active {
 	font-family: "Segoe UI Light", Segoe, sans-serif;
 }
 
-/*VFX*/
-#works_cover {
-	position: relative;
+/*WORKS*/
+.works-cover {		
 	margin: 80px auto;
 	padding-bottom: 100px;
-	width: 1006px;
+	width: 1002px;
 	border: 0px solid cyan;
 	z-index: 0.7;
-
 }
 
-#works_cover img{
+.works-cover img{
 	clear: both;
-	margin: -2px -2px;
+	margin: 0;
 	padding: 0;
 	border: 0px solid red;
+}
+
+.works-title-cover > *{
+	float: left;
+	position: relative;
+	width: 500px;
+	height: 250px;	
+	border: 0px solid pink
+}
+
+.works-title {
+	position: absolute;
+	top: -2px;
+    bottom: 2px;
+    left: -2px;
+    right: 2px;	
+	background: rgba(0, 0, 0, 0.7);
+	color: white;
+	visibility: hidden;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border: 0px solid yellow
+}
+
+.works-title-cover:hover .works-title {
+	visibility: visible;
+	opacity: 0.9
 }
 
 .works-container {
@@ -220,8 +246,8 @@ about a:active {
 }
 
 .works-container ul{
-	 display:inline-block;
-	 position: relative;
+	display:inline-block;
+	position: relative;
 	margin: 20px 50px;
 	font-family: "Segoe UI Regular", Segoe, sans-serif;
 	font-size: 15px;
