--- a/css/master.css
+++ b/css/master.css
@@ -14,11 +14,10 @@ h4{
 
 .container {
 	position: absolute;
-	margin: auto;
 	margin-top: 150px;
-	margin-bottom: 350px;
+	margin-bottom: 450px;
 	width: 100%;
-	height: 70%;
+	height: 100%;
 	border: 0px solid yellow;
 	animation: fadein 1s;
 	z-index : 0.9
@@ -41,9 +40,9 @@ h4{
 
 .title{	
 	position: fixed;
-	width: 300px;
+	width: 350px;
 	margin: 0px 45px;
-	padding: 7px 100px;
+	padding: 20px 100px;
 	border: 0px solid gray	
 }
 
@@ -68,30 +67,8 @@ nav li a {
   	text-decoration: none;  	
 }
 
-/*
-nav li a:link {
-	color: white;
-	opacity: 1;	
-}
-
-nav li a:visited {
-	color: white;
-	opacity: 1;	 
-}
-
-nav li a:hover {
-    color: white;
-    opacity: 0.8
-}
-
-nav li a:active {
-    color: white;
-    opacity: 1.0;
- }
-*/
-
 a:link {
-	color: white
+	color: white	
 }
 
 a:visited {
@@ -107,31 +84,8 @@ a:active{
 		color: white;
 }
 
-/*
-.about a {
-    color: white;
-}
-
-.about a:visited {
-    color: white;
-}
-
-.about a:hover {
-    color: white;
-    opacity: 0.8;
-}
-
-about a:active {
-    color: white;
-}
-*/
-
 #home-menu{
 	color: white
-}
-
-#showreel-menu{
-	color: white;
 }
 
 #vfx-menu{
@@ -140,10 +94,6 @@ about a:active {
 
 #photo-menu{
 	color:white;
-}
-
-#blog-menu{
-	color: white;
 }
 
 #about-menu{
@@ -321,22 +271,7 @@ about a:active {
 	width: 900px;
 	border: 0px solid red
 }
-/*
-.video-gallery {
-	position: static;
-	margin: 60px auto;
-	border: 0px solid blue
-	z-index:0.7;
-}
 
-.video-gallery iframe {
-	position: relative;
-	display: block;
-	margin: 0 auto;
-    padding-bottom: 30px;
-    border: 0px solid #73AD21;
-}
-*/
 
 /*photo.html*/
 #photo-gallery {
@@ -359,14 +294,6 @@ about a:active {
 }
 
 
-#blog-content p{
-	text-align: center;
-	color: white;
-	margin: 280px auto;
-	font-family: "Segoe UI Regular", Segoe, sans-serif;
-	font-size: 18px;
-}
-
 /*ABOUT.html*/
 .about{
 	margin: 100px auto;
@@ -378,8 +305,7 @@ about a:active {
 .about img{
 	display: block;
 	position: absolute;
-	margin-left: 50px;
-	padding-top: 5px;
+	margin-left: 150px;
 	border: 0px solid white;	
 }
 
@@ -389,29 +315,34 @@ about a:active {
 	padding: 0px 0px;
 	width: 330px;	
 	color: white;
-	border: 0px solid #FF0000;
+	border: 0px solid cyan ;
 	font-family: "Segoe UI Regular", Segoe, sans-serif;
-	font-size: 15px;
+	font-size: 13px;
 	text-align: justify;
-	line-height: 139%;
+	line-height: 120%;
+}
+
+#bio a:link
+{
+	text-decoration:none;
 }
 
 #resume-icon {
-	position: relative;
+	position: relative;	
 	float: left;
-	margin-top: 110px;
-	padding-left: 55px;	
+	padding:70px 0px 0px 0px;
+	margin-left:-30px;
 	border: 0px solid pink;
 }
 
 #resume-link {
 	position: relative;
-	border: 0px solid yellow;
-	float: left;
-	padding-left: 85px;
-	padding-top: 125px;
-	font-family: "Segoe UI Light", Segoe, sans-serif;
-	font-size: 13px;
+	float:left;
+	border: 0px solid yellow;	
+	padding-left: 160px;
+	padding-top: 80px;
+	font-family: "Segoe UI Regular", Segoe, sans-serif;
+	font-size: 14px;
 }
 
 #email {
